# hashassin

./: CREDITS.md  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: commands.rs  main.rs
cli/src/commands/: crack.rs  gen_hashes.rs  gen_passwords.rs  rainbow_table.rs  server.rs
core/: Cargo.toml
core/src/: lib.rs
data/: hash.txt  onePassword.txt  out.txt  rainbow_table.txt  rainbow_table2.txt  testHash.txt  testTable.txt  test_hash.txt
data/realTests/: chain1.txt  chain2.txt  crackTest.txt  hash1.txt  hash2.txt  hash2_new.txt  hash2_new2.txt  hash2error.txt  pass.txt  pass2.txt  table1.txt  table2.txt
