[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.1", features = ["derive", "string"] }
anyhow = "1.0"
crossbeam-channel = "0.5.12"
hashassin-core = { path = "../core"}
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
hex = "0.4.3"
tokio = { version = "1", features=["full"] }