[package]
name = "hashassin-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 ="0.5.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
anyhow = "1.0"
rand = "0.8.4"
thiserror= "1.0.57"
md-5 = "0.10.6"
tracing = "0.1"
ascon-hash = "0.2.0"
clap = {version = "4.5.1", features = ["derive", "string"] }
belt-hash = "0.1.1"
sha2 = "0.10.8"
sha3 = "0.10.8"
sha1 = "0.10.4"
shabal = "0.4.1"
hex = "0.4.3"
sm3 = "0.4.2"
ripemd = "0.1.3"
fsb = "0.1.3" 
jh = "0.1.0"
tiger = "0.2.1"
streebog = "0.10.2"
md4 = "0.10.2"
groestl = "0.10.1"
gost94 = "0.10.4"
num = "0.4.1"
digest = "0.10.7"
